        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=12439
        SVG parser complains about points attribute in polygon and polyline element

        Return true when the parsed points specification is valid.



Canonical link: https://commits.webkit.org/16590@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19732 268f45cc-cd09-0410-ab3c-d52691b4dbfc